# Myra-Agents

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  DESIGN.md  Dockerfile  MISSION.md  README.md  README.tauri.md  REFACTOR.md  TODO.md  VISION.md  biome.json  hub-settings-playground.html  ideas.md  next.config.mjs  package.json  server-version.json  skills-lock.json  tsconfig.json  use-case.md
.claude/: launch.json
.design-sync/: NOTES.md  config.json
.ds-sync/: package-build.mjs  package-lock.json  package-validate.mjs  resync.mjs
docs/: centralized-hub-plan.md  clerk-setup.md  hub-deploy.md  multi-server-backend-plan.md  myra-hub.postman_collection.json  remote-instance-installer-plan.md  use-case.md
ds-bundle/: .ds-build-meta.json  .pkg-entry.mjs  .render-check.json  .review.html  .stories-map.json  README.md  _ds_bundle.css  _ds_bundle.js  _ds_sync.json
scripts/: asc-client.mjs  asc-metadata.example.json  asc-register-bundle-id.mjs  asc-update-metadata.mjs  build-app-icon.sh  build-sidecar.mjs  (+7 more)
src-tauri/: Assets.car  Cargo.toml  Info.plist  SIGNING.md  build.rs  dmg-background.html  entitlements.plist  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: demo.rs  keychain.rs  lib.rs  schedule_store.rs  scheduler.rs  settings.rs  tray.rs  watcher.rs
src-tauri/src/commands/: agent.rs  kanban.rs  mod.rs  planner.rs  schedule.rs
src-tauri/src/models/: kanban_card.rs  mod.rs  scheduled_task.rs
(+1869 files in other folders)
